# securechain-ai

./: .env  Anchor.toml  Cargo.toml  mint.json  package-lock.json  package.json  token-info.json  tsconfig.json
programs/securechain-ai/: Cargo.toml
programs/securechain-ai/src/: lib.rs
programs/securechain_ai/: Cargo.toml
programs/securechain_ai/src/: lib.rs
scripts/: package-lock.json  package.json  tsconfig.json
scripts/src/: client.ts  create-metadata.ts  metadata.json  mint.json  token-info.json
scripts/src/types/: securechain_ai.ts
tests/: helpers.ts  securechain-ai.ts
