[package]
name = "securechain-ai"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "securechain_ai"
crate-type = ["cdylib", "lib"]


[features]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
cpi = ["no-entrypoint"]


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.26"
mpl-token-metadata ="3.2.3"

