[package]
name = "securechain-ai"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "securechain_ai"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version="0.31.1",features = ["init-if-needed"]} 
anchor-spl = {version="=0.31.1",features = ["token"] }
mpl-token-metadata = { version = "5.1.1", features = ["serde"] }


[dependencies.indexmap]
version = "=2.2.6"

